# integration_envoystream

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  README.md  hacs.json  info.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.devcontainer/: configuration.yaml  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  release-drafter.yml
.github/workflows/: CI.yml  auto-merge.yml  constraints.txt  labeler.yml  release-drafter.yml  tests.yml
custom_components/envoystream/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  envoy_reader.py  envoystreamapi.py  manifest.json  sensor.py  strings.json
custom_components/envoystream/translations/: en.json  fr.json
scripts/: setup
tests/: test.py
